--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,1 +1,11 @@
 
+#errorMessage{
+    color: red;
+  }
+  form{
+    display:flex;
+    flex-direction: column;
+    gap:10px;
+    align-items: flex-start;
+  }
+  
